--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,14 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-moment": "^0.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-super-responsive-table": "^4.3.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
